--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   overflow-x: hidden;
-  background-color: #cfe2ff;
+  background-color: #bcd7ff;
 }
 
 .col-auto:first-child {
@@ -57,6 +57,10 @@ body {
 
 .list-group-item + .list-group-item {
   border-top-width: thin;
+}
+
+.list-group-item:last-child {
+  margin-bottom: 1.5rem;
 }
 
 .op {
